# Webstockprj

./: CMakeLists.txt  CThostFtdcMdSpiImp.h  README.md  syc  syc.cpp
CTP_Demo/CTP行情Demo/: CTPQuoteDemo.cpp  CTP行情Demo.vcxproj  CTP行情Demo.vcxproj.filters  CThostFtdcMdSpiImp.h  CsimpleMdHandlerExtended.h
CTP_Demo/CTP行情Demo/x64/Release/: CTP行情Demo.exe.recipe  (+2 more)
Server/: CTP行情Demo.sln
Server/CTP行情Demo/: CTPQuoteDemo.cpp  CTP行情Demo.vcxproj  CTP行情Demo.vcxproj.filters  CThostFtdcMdSpiImp.h
client/: CMakeLists.txt  Email.cpp  Friend.cpp  Friend.h  README.md  dataManager.cpp  dataManager.h  loginWIindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  myServer.cpp  myServer.h  resources.qrc  signupWindow.cpp  userManager.cpp  userManager.h  userWindow.cpp  userWindow.h
client/capitalWindow/: loginWindow.h  signupWindow.cpp  signupWindow.h  userWindow.cpp  userWindow.h
client/userData/: Email.cpp  Email.h  Friend.cpp  Friend.h  Futures.cpp  Futures.h
client/userUI/: userEmail.cpp  userEmail.h  userFutures.cpp  userFutures.h  userInfo.cpp  userInfo.h  userMassage.cpp  userMassage.h
client/userUI/subUserEmailUI/: EmailUI.cpp  EmailUI.h
client/userUI/subUserFuturesUI/: FuturesUI.cpp  FuturesUI.h  configFuturesUI.cpp  configFuturesUI.h
client/userUI/subUserInfoUI/: addFuturesUI.cpp  addFuturesUI.h  changeInfoUI.cpp  changeInfoUI.h  changePasswordUI.cpp  changePasswordUI.h  friendAddUI.cpp  friendAddUI.h  infoUI.cpp  infoUI.h
client/userUI/subUserMassageUI/: friendUI.cpp  friendUI.h
include/: CThostFtdcMdSpiImp.h
src/: CTPQuoteDemo.cpp
syc.dSYM/Contents/: Info.plist
(+11 files in other folders)
